--- a/conf/dp/manager/portainer.yml
+++ b/conf/dp/manager/portainer.yml
@@ -8,6 +8,6 @@ services:
       - '9000:9000'
       - '9443:9443'
     volumes:
-      - data:/data
+      - ./data:/data
       - /etc/localtime:/etc/localtime:ro
       - /var/run/docker.sock:/var/run/docker.sock
