--- a/conf/dp/manager/yacht.yml
+++ b/conf/dp/manager/yacht.yml
@@ -7,6 +7,6 @@ services:
     ports:
       - '8000:8000'
     volumes:
-      - yacht:/config
+      - ./config:/config
       - /etc/localtime:/etc/localtime:ro
       - /var/run/docker.sock:/var/run/docker.sock
