--- a/conf/dp/manager/yacht.yml
+++ b/conf/dp/manager/yacht.yml
@@ -3,9 +3,10 @@ services:
   yacht:
     image: selfhostedpro/yacht
     container_name: 'yacht'
-    restart: unless-stopped
+    restart: always
     ports:
-      - '8000:8000'
+      - '8005:8000'
+      - '9001:8001'
     volumes:
       - ./config:/config
       - /etc/localtime:/etc/localtime:ro
