--- a/conf/dp/household/barassistant.yml
+++ b/conf/dp/household/barassistant.yml
@@ -16,7 +16,7 @@ services:
     volumes:
       - ./redis:/data:rw
     environment:
-      TZ: Europe/Bucharest
+      TZ: Europe/Berlin
       ALLOW_EMPTY_PASSWORD: yes
     restart: on-failure:5
 
