--- a/conf/dp/household/mealiev1.yml
+++ b/conf/dp/household/mealiev1.yml
@@ -9,17 +9,18 @@ services:
     environment:
       - API_URL: http://mealie-api:9000
     volumes:
-      - /volume1/docker/mealie:/app/data/
+      - ./data:/app/data/
+
   mealie-api:
     image: hkotel/mealie:api-v1.0.0beta-5
     container_name: mealie-api
     volumes:
-      - /volume1/docker/mealie:/app/data/
+      - ./apidata:/app/data/
     environment:
       ALLOW_SIGNUP: true
       PUID: 1026
       PGID: 100
-      TZ: Europe/Bucharest
+      TZ: Europe/Berlin
       MAX_WORKERS: 1
       WEB_CONCURRENCY: 1
       BASE_URL: http://192.168.1.18
